# qtav-player-build

./: CMakeLists.txt  README.md
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
debug/av_player_autogen/UVLADIE3JM/: moc_av_player.cpp
lib/: av_player.h
lib/debug/: av_playerd.exp  av_playerd.ilk
lib/release/: av_player.exp
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
release/av_player_autogen/: mocs_compilation.cpp
src/: av_player.cpp  av_player.h
